--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "http://192.168.0.246:20002/finnhartshorn/react-tictactoe.git"
+  },
+  "author": "",
+  "license": "ISC"
 }
